--- a/small.css
+++ b/small.css
@@ -7,20 +7,106 @@
 body {
   background-color: grey;
   font-family: 'Montserrat', sans-serif;
+  display: flex;
+  flex-direction: column;
+  position: relative;
   height: 1000px;
 }
 
-main {
+body .nav {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
-.navSmall {
+body .nav .menuLabel {
   display: grid;
-  position: sticky;
-  grid-template-columns: 10fr 2fr;
-  padding: 10px;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  padding: 15px 20px;
   background-color: black;
+  z-index: 1;
+  position: sticky;
+  top: 0;
+}
+
+body .nav .menuLabel .menuBars, body .nav .menuLabel .logo {
+  display: grid;
+  justify-self: start;
+  background: none;
+  border: none;
+}
+
+body .nav .menuLabel .logo {
+  justify-self: end;
+}
+
+body .nav .menuLabel .logo, body .nav .menuLabel i {
+  align-self: center;
+  color: white;
+  font-size: 18px;
+}
+
+body .collapseMenu {
+  position: absolute;
+  top: 55px;
+  left: -100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 15px 10px;
+  text-align: left;
+  border-bottom-right-radius: 50px;
+  transition: left 1.2s;
+  z-index: 30;
+}
+
+body .collapseMenu ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  list-style-position: outside;
+}
+
+body .collapseMenu li {
+  padding: 15px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.nav:hover > .collapseMenu {
+  left: 0;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image: url(/imgs/header1.jpg);
+  background-color: red;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+
+.header .hero-shadow {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
+
+.header h1 {
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 24px;
 }
 /*# sourceMappingURL=small.css.map */
