--- a/small.sass
+++ b/small.sass
@@ -9,19 +9,20 @@ body
     display: flex
     flex-direction: column
     position: relative
-    height: 1000px
+    // height: 1000px
+    color: white
     // overflow: hidden
     
     .nav
         display: flex
         position: sticky
         top: 0
-        z-index: 1
+        z-index: 2
         // width: 100%
 
         .menuLabel
             display: grid
-            grid-template-columns: 1fr 1fr
+            grid-template-columns: 1fr 3fr
             width: 100%
             padding: 15px 20px
             background-color: black
@@ -41,13 +42,18 @@ body
             .logo, i
                 align-self: center
                 color: white
-                font-size: 18px
+                font-size: 16px
+                text-transform: uppercase
+            i
+                font-size: 20px
 
     .collapseMenu
         position: absolute
-        top: 55px
-        left: -100%// transition to 0 for collapse
-        background-color: rgba(0, 0, 0, 0.8)
+        top: 52px
+        left: -75%// transition to 0 for collapse
+        // background-color: rgba(0, 0, 0, 0.8)
+        background: rgb(0,0,0)
+        background: linear-gradient(180deg, rgba(0,0,0,1) 30%, rgba(0,0,0,0.7) 100%)
         color: white
         padding: 15px 10px
         text-align: left
@@ -65,6 +71,9 @@ body
             letter-spacing: 1px
             text-transform: uppercase
 
+            i
+                padding: 0px 15px
+
 
 // .collapseMenu .nav:hover
 // .nav:hover + .collapseMenu
@@ -76,6 +85,13 @@ body
 
 // hover to test
 
+.hero-shadow
+    position: absolute
+    background-color: rgba(0,0,0,0.7)
+    height: 100%
+    width: 100%
+    z-index: -1
+
 .header
     display: flex
     flex-direction: column
@@ -84,27 +100,102 @@ body
     position: relative
     width: 100%
     height: 400px
-    background-image: url(/imgs/header1.jpg)
-    background-color: red
+    background-image: url(/imgs/headerSmall2.jpg)
+    // background-color: black
     background-position: center
     background-size: cover
     background-repeat: no-repeat
-    z-index: 1
+    background-attachment: fixed
+    z-index: 0
 
-
-    .hero-shadow
-        position: absolute
-        background-color: rgba(0,0,0,0.7)
-        height: 100%
-        width: 100%
-        z-index: -1
-
-    h1
+    h1, h3
         color: white 
         text-align: center
         text-transform: uppercase
         letter-spacing: 2px
         font-size: 24px
+
+    h3
+        letter-spacing: 1px
+        font-size: 16px
+        padding: 0px 20px
+    
+    span
+        color: white
+        text-align: center
+        font-size: 14px
+        padding: 25px
+        font-family: "Montserrat", cursive
+
+.articlesListSection
+    display: flex
+    flex-direction: column
+    height: 100%
+    width: 100%
+    background-color: black
+
+    h3
+        padding: 30px 0px 20px 0px
+        margin: 0px 30px
+        font-size: 18px
+        text-align: left
+        text-transform: uppercase
+        letter-spacing: 2px
+        // border-bottom: 1px solid white
+
+        i
+            color: grey
+
+    .underline
+        // align-self: center
+        margin: 0px 30px 30px 30px
+        height: 1px
+        background-color: white
+        // width: 80%
+
+    .artCard
+        align-self: center
+        height: 250px
+        width: 80%
+        margin: 20px
+        background-size: cover
+        background-position: center
+        background-image: url(/imgs/training1.jpg)
+        box-shadow: 0px 0px 20px #0c0c0c
+        z-index: 1
+
+        .textCard
+            display: flex
+            flex-direction: column
+            justify-content: flex-end
+            align-items: center
+            height: 100%
+            width: 100%
+            background: rgb(0,0,0)
+            background: linear-gradient(180deg, rgba(0,0,0,0.2) 0%, rgba(0,0,0,0.9) 70%)
+            z-index: -1
+
+            h3, span
+                margin: 0 10px
+                padding: 10px
+                text-align: left
+
+            h3
+                font-size: 20px
+                border-bottom: 1px solid grey
+            span
+                font-size: 14px
+
+    .firstArticle
+        background-image: url(/imgs/article_zmeczenie.jpg)
+    .secondArticle
+        background-image: url(/imgs/article_zdrowiepsych.jpg)
+    .thirdArticle
+        background-image: url(/imgs/article_sauna.jpg)
+    .fourthArticle
+        background-image: url(/imgs/article_zakwasy.jpg)
+
+
 
 
 // .main
